fix top overflow for gallery

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -2,10 +2,14 @@
   overflow: hidden;
   padding: 40px 0;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .cards__wrapper {
   overflow: hidden;
+  padding-top: 5px;
+  overflow-x: hidden;
+  overflow-y: visible;
 }
 
 .cards__container {
